--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "graphql": "^16.4.0",
+    "graphql-request": "^4.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0"
